@@ -14,7 +14,7 @@
 		class=".seo_config.PerSEOConfig"
 		layer=".interfaces.IPerSEOLayer"
 		permission="cmf.ManagePortal"
-		allowed_attributes="perseo_itemscope_itemtype perseo_itemtype"
+		allowed_attributes="perseo_itemscope_itemtype perseo_itemtype perseo_indexing_feed_rss"
 		/>
 		
 	<browser:page
@@ -23,7 +23,7 @@
 		class=".views.PerSEOContextPloneSiteRoot"
 		layer=".interfaces.IPerSEOLayer"
 		permission="zope2.View"
-		allowed_attributes="perseo_itemscope_itemtype perseo_itemtype"
+		allowed_attributes="perseo_itemscope_itemtype perseo_itemtype perseo_indexing_feed_rss"
 		/>
 		
 	<browser:page
@@ -32,7 +32,7 @@
 		class=".views.PerSEOContextATDocument"
 		layer=".interfaces.IPerSEOLayer"
 		permission="zope2.View"
-		allowed_attributes="perseo_itemscope_itemtype perseo_itemtype"
+		allowed_attributes="perseo_itemscope_itemtype perseo_itemtype perseo_indexing_feed_rss"
 		/>
 		
 	<browser:page
@@ -41,7 +41,7 @@
 		class=".views.PerSEOContextATEvent"
 		layer=".interfaces.IPerSEOLayer"
 		permission="zope2.View"
-		allowed_attributes="perseo_itemscope_itemtype perseo_itemtype"
+		allowed_attributes="perseo_itemscope_itemtype perseo_itemtype perseo_indexing_feed_rss"
 		/>
 		
 	<browser:page
@@ -50,7 +50,7 @@
 		class=".views.PerSEOContextATFile"
 		layer=".interfaces.IPerSEOLayer"
 		permission="zope2.View"
-		allowed_attributes="perseo_itemscope_itemtype perseo_itemtype"
+		allowed_attributes="perseo_itemscope_itemtype perseo_itemtype perseo_indexing_feed_rss"
 		/>
 		
 	<browser:page
@@ -59,7 +59,7 @@
 		class=".views.PerSEOContextATFolder"
 		layer=".interfaces.IPerSEOLayer"
 		permission="zope2.View"
-		allowed_attributes="perseo_itemscope_itemtype perseo_itemtype"
+		allowed_attributes="perseo_itemscope_itemtype perseo_itemtype perseo_indexing_feed_rss"
 		/>
 		
 	<browser:page
@@ -68,7 +68,7 @@
 		class=".views.PerSEOContextATImage"
 		layer=".interfaces.IPerSEOLayer"
 		permission="zope2.View"
-		allowed_attributes="perseo_itemscope_itemtype perseo_itemtype"
+		allowed_attributes="perseo_itemscope_itemtype perseo_itemtype perseo_indexing_feed_rss"
 		/>
 		
 	<browser:page
@@ -77,7 +77,7 @@
 		class=".views.PerSEOContextATLink"
 		layer=".interfaces.IPerSEOLayer"
 		permission="zope2.View"
-		allowed_attributes="perseo_itemscope_itemtype perseo_itemtype"
+		allowed_attributes="perseo_itemscope_itemtype perseo_itemtype perseo_indexing_feed_rss"
 		/>
 		
 	<browser:page
@@ -86,7 +86,7 @@
 		class=".views.PerSEOContextATNewsItem"
 		layer=".interfaces.IPerSEOLayer"
 		permission="zope2.View"
-		allowed_attributes="perseo_itemscope_itemtype perseo_itemtype"
+		allowed_attributes="perseo_itemscope_itemtype perseo_itemtype perseo_indexing_feed_rss"
 		/>
 		
 	<browser:page
@@ -95,7 +95,7 @@
 		class=".views.PerSEOContextATTopic"
 		layer=".interfaces.IPerSEOLayer"
 		permission="zope2.View"
-		allowed_attributes="perseo_itemscope_itemtype perseo_itemtype"
+		allowed_attributes="perseo_itemscope_itemtype perseo_itemtype perseo_indexing_feed_rss"
 		/>
 		
 	<browser:page
@@ -104,7 +104,7 @@
 		class=".views.PerSEOContext"
 		layer=".interfaces.IPerSEOLayer"
 		permission="zope2.View"
-		allowed_attributes="perseo_itemscope_itemtype perseo_itemtype"
+		allowed_attributes="perseo_itemscope_itemtype perseo_itemtype perseo_indexing_feed_rss"
 		/>
 		
 	<browser:page
